Fix: Make tables scrollable on phones instead of overflowing

--- a/frontend/src/containers/x4/Resources/Resources.scss
+++ b/frontend/src/containers/x4/Resources/Resources.scss
@@ -3,8 +3,13 @@
 .x4-resources-table {
   @include long-text;
 
+  &__wrapper {
+    overflow-y: scroll;
+  }
+
   table {
     margin: 0 0 1em;
+    min-width: 680px;
   }
 
   tr {
